# LinuxStudy

./: README.md
APUE/01-Unix基础知识/: 01-Unix基础知识.md  mycat  mycat.c  myls  myls.c  myshell1  myshell1.c  testerrno  testerrno.c
APUE/02-Unix标准及实现/: 02-Unix标准及实现.md
APUE/03-文件IO/: 03-文件IO.md  lseek  lseek.c
APUE/04-文件和目录/: 04-文件和目录.md  chmod  chmod.c  umask  umask.c
APUE/05-标准IO库/: 05-标准IO库.md  buftest  buftest.c  memstr.c  memstr[A  mkstemp  mkstemp.c  stdecho  stdecho.c  tempfiles  tempfiles.c
APUE/06-系统数据文件和信息/: 06-系统数据文件和信息.md
APUE/07-进程环境/: 07-进程环境.md  atexit  atexit.c  echoarg  echoarg.c  environ  environ.c  jmp  jmp.c  testjmp  testjmp.c
APUE/08-进程控制/: 08-进程控制.md  competitive  competitive.c  competitive2  competitive2.c  fork1  fork1.c  temp.out  vfork  vfork.c  wait  wait.c  waitpid  waitpid.c
APUE/09-进程关系/: 09-进程关系.md  myshell  myshell.c
APUE/10-信号/: 10-信号.md  read1  read1.c  read2  read2.c  sigcld  sigcld.c  sigjmp  sigjmp.c  sigpending  sigpending.c  sigusr  sigusr.c
APUE/11-线程/: 11-线程.md  badexit  badexit.c  cleanup  cleanup.c  mutex1.c  prthreadid  prthreadid.c  pthreadjoin  pthreadjoin.c
APUE/12-线程控制/: 12-线程控制.md  getenv.c  getenv_r.c  getenv_r_f.c  mkthreaddetach.c
APUE/13-守护进程/: 13-守护进程.md  daemonize  daemonize.c
APUE/14-高级IO/: 14-高级IO.md  ROT13  ROT13.c  ROT13.out  ROT13_unblk  ROT13_unblk.c  ROT13_unblk.out  mmap_copy  mmap_copy.c  mmap_copy.out  nonblockw  nonblockw.c  rwn.c
APUE/15-进程间通信/: 15-进程间通信.md  add  add.c  coproc  coproc.c  pipe1  pipe1.c  pipe2  pipe2.c  popen  popen.c  shm  shm.c
Project/ChatRoomServer/: client  client.cc  server  server.cc
Project/DistributedCacheSystem/单元测试/Cache Server/lru/: CMakeLists.txt  LRU.hpp  cmake_install.cmake  test_lru.cpp  test_lru[1]_include.cmake
Project/Mini_DCS/: .gitignore
Project/Mini_DCS/master/: CMakeLists.txt  README.txt  main.cpp
Project/Mini_DCS/master/common/: buffer.h  config.h  connection.cpp  consistentHash.h  epoll.cpp  request.cpp  request.h  response.h  safeQueue.h  task.h  threadPool.cpp  threadsafe_queue_ht.h  timer.cpp  timer.h  tp_st.cpp  tp_st.h
Project/Mini_DCS/master/src/: main.cpp  manager.cpp  manager.h  netServer.cpp  netServer.h  nodeConHash.cpp  nodeConHash.h
Project/Mini_DCS/master/test/: a.out  client  testClien  testClient  test_client.cpp  test_consistentHash.cpp  test_epoll.cpp  test_log.cpp  test_safeQueue.cpp  test_threadPool.cpp  threadPool
Project/Mini_DCS/单元测试/Cache Server/test_thpl/: CMakeLists.txt  Makefile  test_thpl
Project/Mini_DCS/单元测试/Client/: CMakeLists.txt  client.hpp  client_unittest.cpp
Project/Mini_DCS/单元测试/ch_and_log/log_file/: CMakeLists.txt
Project/Mini_DCS/单元测试/ch_and_log/log_file/include/: logfile.hpp
Project/Mini_DCS/单元测试/ch_and_log/log_file/src/: main.cpp
Project/TinyWebServer-raw_version/: main.c  server
TCPIP网络编程/: test  test.c
TCPIP网络编程/08-dns_ip/: gethostbyaddr  gethostbyaddr.c  gethostbyname  gethostbyname.c
TCPIP网络编程/09-sockopt/: sock_buf  sock_buf.c  sock_type  sock_type.c
TCPIP网络编程/10-multi_process_serv/: 10-多进程服务器端.md  fork  fork.c  (+8 more)
面经/: rpc.md
(+389 files in other folders)
